Solved violations